srcs/my-ftps.yaml
apiVersion: v1
kind: Service
metadata:
  name: ftps-service
  labels:
    app: ftps-app
spec:
  selector:
    app: ftps-app
  ports:
    - port: 21
      targetPort: 21
      nodePort: 21
      protocol: TCP
      name: http
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ftps-deployment
  labels:
    app: ftps-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ftps-app
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: ftps-app
    spec:
      restartPolicy: Always
      containers:
      - image: my-ftps
        name: my-ftps
        ports:
        - containerPort: 21
          name: my-ftps
        imagePullPolicy: Never
