srcs/my-grafana.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana-service
  labels:
    app: grafana-app
spec:
  selector:
    app: grafana-app
  ports:
    - port: 3000
      targetPort: 3000
      nodePort: 3000
      protocol: TCP
      name: http
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana-deployment
  labels:
    app: grafana-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana-app
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: grafana-app
    spec:
      restartPolicy: Always
      containers:
      - image: my-grafana
        name: my-grafana
        ports:
        - containerPort: 3000
          name: my-grafana
        imagePullPolicy: Never
