srcs/my-influxdb.yaml
apiVersion: v1
kind: Service
metadata:
  name: influxdb-service
  labels:
    app: influxdb-app
spec:
  selector:
    app: influxdb-app
  ports:
    - port: 8086
      targetPort: 8086
      nodePort: 8086
      protocol: TCP
      name: http
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: influxdb-deployment
  labels:
    app: influxdb-app
spec:
  selector:
    matchLabels:
      app: influxdb-app
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: influxdb-app
    spec:
      restartPolicy: Always
      containers:
      - image: my-influxdb
        name: my-influxdb
        imagePullPolicy: Never
        ports:
        - containerPort: 8086
          name: my-influxdb
        volumeMounts:
        - name: influxdb-persistent-storage
          mountPath: /var/lib/influxdb
      volumes:
      - name: influxdb-persistent-storage
        persistentVolumeClaim:
          claimName: influxdb-pv-claim
