srcs/my-mysql.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
  labels:
    app: mysql-app
spec:
  selector:
    app: mysql-app
  ports:
    - port: 3306
      targetPort: 3306
      nodePort: 3306
      protocol: TCP
      name: http
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-deployment
  labels:
    app: mysql-app
spec:
  selector:
    matchLabels:
      app: mysql-app
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mysql-app
    spec:
      restartPolicy: Always
      containers:
      - image: my-mysql
        name: my-mysql
        imagePullPolicy: Never
        ports:
        - containerPort: 3306
          name: my-mysql
        volumeMounts:
        - name: mysql-persistent-storage
          mountPath: /var/lib/mysql
      volumes:
      - name: mysql-persistent-storage
        persistentVolumeClaim:
          claimName: mysql-pv-claim
