srcs/my-phpmyadmin.yaml
apiVersion: v1
kind: Service
metadata:
  name: phpmyadmin-service
  labels:
    app: phpmyadmin-app
spec:
  selector:
    app: phpmyadmin-app
  ports:
    - port: 5000
      targetPort: 5000
      nodePort: 5000
      protocol: TCP
      name: http
  type: NodePort
---
# apiVersion: v1
# kind: PersistentVolumeClaim
# metadata:
#   name: wp-pv-claim
#   labels:
#     app: wordpress-app
# spec:
#   accessModes:
#     - ReadWriteOnce
#   resources:
#     requests:
#       storage: 1Gi
# ---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: phpmyadmin-deployment
  labels:
    app: phpmyadmin-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: phpmyadmin-app
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: phpmyadmin-app
    spec:
      restartPolicy: Always
      containers:
      - image: my-phpmyadmin
        name: my-phpmyadmin
        ports:
        - containerPort: 5000
          name: my-phpmyadmin
        imagePullPolicy: Never
