srcs/my-telegraf.yaml
apiVersion: v1
kind: Service
metadata:
  name: telegraf-service
  labels:
    app: telegraf-app
spec:
  selector:
    app: telegraf-app
  ports:
    - port: 8125
      targetPort: 8125
      nodePort: 8125
      protocol: TCP
      name: http
  type: NodePort
---
#apiVersion: v1
#kind: PersistentVolumeClaim
#metadata:
#  name: gr-pv-claim
#  labels:
#    app: telegraf-app
#spec:
#  accessModes:
#    - ReadWriteOnce
#  resources:
#    requests:
#      storage: 1Gi
#---
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: telegraf-deployment
  labels:
    app: telegraf-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: telegraf-app
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: telegraf-app
    spec:
      restartPolicy: Always
      containers:
      - image: my-telegraf
        name: my-telegraf
        ports:
        - containerPort: 8125
          name: my-telegraf
        imagePullPolicy: Never
        volumeMounts:
        - mountPath: /etc/telegraf.conf
          name: telegraf-config
          subPath: telegraf.conf
          readOnly: true
        - mountPath: /var/run/docker.sock
          name: dockersock
      volumes:
      - name: telegraf-config
        configMap:
          name: telegraf-config
      - name: dockersock
        hostPath:
          path: /var/run/docker.sock
