srcs/my-wordpress.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress-service
  labels:
    app: wordpress-app
spec:
  selector:
    app: wordpress-app
  ports:
    - port: 5050
      targetPort: 5050
      nodePort: 5050
      protocol: TCP
      name: http
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress-deployment
  labels:
    app: wordpress-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wordpress-app
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: wordpress-app
    spec:
      restartPolicy: Always
      containers:
      - image: my-wordpress
        name: my-wordpress
        ports:
        - containerPort: 5050
          name: my-wordpress
        imagePullPolicy: Never
