srcs/my-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: my-ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: nginx-service
          servicePort: 80

# apiVersion: networking.k8s.io/v1beta1
# kind: Ingress
# metadata:
#   name: ingress
# spec:
#   backend:
#     serviceName: nginx
#     servicePort: 80
