srcs/my-nginx.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  labels:
    app: nginx-app
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    nodePort: 80
    protocol: TCP
    name: http
  - port: 443
    targetPort: 443
    nodePort: 443
    protocol: TCP
    name: https
  - port: 22
    targetPort: 22
    nodePort: 22
    protocol: TCP
    name: ssh
  selector:
    app: nginx-app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: nginx-app
  replicas: 1
  template:
    metadata:
      labels:
        app: nginx-app
    spec:
      restartPolicy: Always
      containers:
      - image: my-nginx
        name: my-nginx
        imagePullPolicy: Never
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-nginx
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: nginx-service
          servicePort: 80
